feat: add search to segment list
