# backend/swagger.YAML
@@ -588,6 +588,17 @@ paths:
       description: "List all segment"
       security:
         - bearerAuth: []
+      parameters:
+        - in: query
+          name: keyword
+          schema:
+            type: string
+          description: Search for name or description
+        - in: query
+          name: page
+          schema:
+            type: integer
+          description: Page navigation
       responses:
         201:
           description: "Success"
